--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="col-md-12">
               <div class="colorlib-navbar-brand">
                 <a class="colorlib-logo" href="index.html"
-                  ><span>J</span><span>D</span></a
+                  ><span>As</span><span>Ly</span></a
                 >
               </div>
             </div>
@@ -70,14 +70,14 @@
                 <div class="item">
                   <img
                     class="img-responsive about-img"
-                    src="images/about.jpg"
+                    src="images/about-1.jpg"
                     alt="html5 bootstrap template by colorlib.com"
                   />
                 </div>
                 <div class="item">
                   <img
                     class="img-responsive about-img"
-                    src="images/about-2.jpg"
+                    src="images/about-2.png"
                     alt="html5 bootstrap template by colorlib.com"
                   />
                 </div>
@@ -87,7 +87,7 @@
               <div class="about-desc">
                 <div class="owl-carousel3">
                   <div class="item">
-                    <h2><span>John</span><span>Doe</span></h2>
+                    <h2><span>Ashly PK</span><span></span></h2>
                   </div>
                   <div class="item">
                     <h2><span>I'm</span><span>A Web Developer</span></h2>
@@ -185,11 +185,11 @@
                         </ul>
                       </div>
                       <div class="services animate-box">
-                        <h3>4 - Web Marketing</h3>
+                        <h3>4 - Mobile Development</h3>
                         <ul>
-                          <li>Sales Marketing</li>
-                          <li>Invoice</li>
-                          <li>eCommerce</li>
+                          <li>Dart & Flutter</li>
+                          <li>iOS</li>
+                          <li>Android</li>
                         </ul>
                       </div>
                     </div>
@@ -206,7 +206,7 @@
       </div>
 
       <!-- work -->
-      <div id="colorlib-work">
+      <!-- <div id="colorlib-work">
         <div class="container">
           <div class="row text-center">
             <h2 class="bold">Works</h2>
@@ -279,7 +279,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <!-- testimonial -->
       <div id="colorlib-testimony">
@@ -375,10 +375,14 @@
                       ask any questions. I'm always here to help!
                     </p>
                     <!-- email -->
-                    <p><a href="#">me@example.com</a></p>
+                    <p>
+                      <a href="mailto:ashlypk1600@gmail.com"
+                        >ashlypk1600@gmail.com</a
+                      >
+                    </p>
                     <!-- social media links -->
                     <p class="colorlib-social-icons">
-                      <a href="#"><i class="icon-facebook4"></i></a>
+                      <a href=""><i class="icon-facebook4"></i></a>
                       <a href="#"><i class="icon-twitter3"></i></a>
                       <a href="#"><i class="icon-googleplus"></i></a>
                       <a href="#"><i class="icon-dribbble2"></i></a>
